--- a/src/main/resources/view/DetailsView.fxml
+++ b/src/main/resources/view/DetailsView.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,9 +15,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="900.0" prefWidth="1350.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.airly.controller.DetailedStatisticsController">
+<AnchorPane prefHeight="900.0" prefWidth="1500.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.edu.agh.airly.controller.DetailedStatisticsController">
     <children>
-        <BorderPane prefHeight="900.0" prefWidth="1350.0">
+        <BorderPane prefHeight="900.0" prefWidth="1500.0">
             <left>
                 <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #464159;" BorderPane.alignment="CENTER">
                     <children>
@@ -31,12 +32,12 @@
                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                             </padding>
                         </HBox>
-                        <Button fx:id="generalStatisticsButton" mnemonicParsing="false" prefHeight="59.0" prefWidth="167.0" text="GENERAL STATISTICS" onAction="#handleGeneralStatisticsAction">
+                        <Button fx:id="generalStatisticsButton" mnemonicParsing="false" onAction="#handleGeneralStatisticsAction" prefHeight="59.0" prefWidth="167.0" text="GENERAL STATISTICS">
                             <VBox.margin>
                                 <Insets left="60.0" right="50.0" top="50.0" />
                             </VBox.margin>
                         </Button>
-                        <Button fx:id="exitButton" mnemonicParsing="false" prefHeight="59.0" prefWidth="167.0" text="EXIT" onAction="#handleExitAction">
+                        <Button fx:id="exitButton" mnemonicParsing="false" onAction="#handleExitAction" prefHeight="59.0" prefWidth="167.0" text="EXIT">
                             <VBox.margin>
                                 <Insets left="60.0" top="20.0" />
                             </VBox.margin>
@@ -56,88 +57,96 @@
                 </VBox>
             </left>
             <center>
-                <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #6c7b95;" BorderPane.alignment="CENTER">
+                <VBox prefHeight="900.0" prefWidth="1135.0" style="-fx-background-color: #6c7b95;" BorderPane.alignment="CENTER">
                     <children>
-                        <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #464159;">
+                        <HBox prefHeight="100.0" prefWidth="1130.0" style="-fx-background-color: #464159;">
                             <padding>
                                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                             </padding>
                         </HBox>
-                  <VBox prefHeight="616.0" prefWidth="996.0">
+                  <HBox prefHeight="666.0" prefWidth="1208.0">
                      <children>
-                        <CheckBox mnemonicParsing="false" prefHeight="74.0" prefWidth="497.0" text="TOP 10 INSTALLATIONS FOR WHICH THE VALUE OF CHOSEN PARAMETER IN SPECIFIED PERIOD WAS EXCEEDED AT LEAST ONCE" textFill="WHITE" wrapText="true">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </CheckBox>
-                        <HBox prefHeight="131.0" prefWidth="998.0">
+                        <VBox prefHeight="680.0" prefWidth="1058.0">
                            <children>
-                              <ComboBox fx:id="parameterComboBox1" prefWidth="230.0" promptText="Parameter" styleClass="combo-box">
+                              <CheckBox fx:id="top10InstaCheckBox" mnemonicParsing="false" prefHeight="74.0" prefWidth="497.0" text="TOP 10 INSTALLATIONS FOR WHICH THE VALUE OF CHOSEN PARAMETER IN SPECIFIED PERIOD WAS EXCEEDED AT LEAST ONCE" textFill="WHITE" wrapText="true">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </CheckBox>
+                              <HBox prefHeight="131.0" prefWidth="998.0">
+                                 <children>
+                                    <ComboBox fx:id="parameterComboBox1" prefWidth="230.0" promptText="Parameter" styleClass="combo-box">
+                                       <padding>
+                                          <Insets left="30.0" right="30.0" />
+                                       </padding>
+                                    </ComboBox>
+                                    <ComboBox fx:id="fromDateTimeComboBox" prefHeight="60.0" prefWidth="230.0" promptText="From DateTime" styleClass="combo-box">
+                                       <HBox.margin>
+                                          <Insets left="30.0" right="30.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
+                                    <ComboBox fx:id="tillDateTimeComboBox" prefHeight="66.0" prefWidth="230.0" promptText="Till DateTime" styleClass="combo-box" />
+                                 </children>
                                  <padding>
-                                    <Insets left="30.0" right="30.0" />
-                                 </padding>
-                              </ComboBox>
-                              <ComboBox fx:id="fromDateTime" prefHeight="60.0" prefWidth="230.0" promptText="From DateTime" styleClass="combo-box">
-                                 <HBox.margin>
-                                    <Insets left="30.0" right="30.0" />
-                                 </HBox.margin>
-                              </ComboBox>
-                              <ComboBox fx:id="tillDateTime" prefHeight="66.0" prefWidth="230.0" promptText="Till DateTime" styleClass="combo-box" />
-                           </children>
-                           <padding>
-                              <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-                           </padding>
-                        </HBox>
-                        <CheckBox mnemonicParsing="false" prefHeight="71.0" prefWidth="486.0" text="TOP 10 CITIES FOR WHICH THE AVERAGE VALUE FOR CHOSEN PARAMETER WAS THE HIGHEST" textFill="WHITE" wrapText="true">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </CheckBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <ComboBox fx:id="parameterComboBox2" prefWidth="230.0" promptText="Parameter" styleClass="combo-box">
-                                 <padding>
-                                    <Insets left="30.0" />
-                                 </padding>
-                                 <HBox.margin>
-                                    <Insets bottom="30.0" left="30.0" top="30.0" />
-                                 </HBox.margin>
-                              </ComboBox>
-                           </children>
-                        </HBox>
-                        <CheckBox mnemonicParsing="false" prefHeight="80.0" prefWidth="593.0" text="TIME (HOUR DURING THE DAY) FOR WHICH THE AVERAGE VALUE FOR CHOSEN PARAMETER IN SPECIFIED CITY IS THE HIGHEST" textFill="WHITE" wrapText="true">
-                           <font>
-                              <Font size="17.0" />
-                           </font>
-                        </CheckBox>
-                        <HBox maxHeight="400.0" prefHeight="150.0" prefWidth="998.0">
-                           <children>
-                              <ComboBox fx:id="cityComboBox" prefHeight="66.0" prefWidth="230.0" promptText="City" styleClass="combo-box">
-                                 <HBox.margin>
-                                    <Insets left="30.0" top="30.0" />
-                                 </HBox.margin>
-                              </ComboBox>
-                              <ComboBox fx:id="parameterComboBox3" prefWidth="230.0" promptText="Parameter" styleClass="combo-box">
-                                 <padding>
-                                    <Insets left="30.0" right="30.0" />
-                                 </padding>
-                                 <HBox.margin>
                                     <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-                                 </HBox.margin>
-                              </ComboBox>
+                                 </padding>
+                              </HBox>
+                              <CheckBox fx:id="top10CitiesCheckBox" mnemonicParsing="false" prefHeight="71.0" prefWidth="486.0" text="TOP 10 CITIES FOR WHICH THE AVERAGE VALUE FOR CHOSEN PARAMETER WAS THE HIGHEST" textFill="WHITE" wrapText="true">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </CheckBox>
+                              <HBox prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <ComboBox fx:id="parameterComboBox2" prefWidth="230.0" promptText="Parameter" styleClass="combo-box">
+                                       <padding>
+                                          <Insets left="30.0" />
+                                       </padding>
+                                       <HBox.margin>
+                                          <Insets bottom="30.0" left="30.0" top="30.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
+                                 </children>
+                              </HBox>
+                              <CheckBox fx:id="hourCheckBox" mnemonicParsing="false" prefHeight="80.0" prefWidth="593.0" text="TIME (HOUR DURING THE DAY) FOR WHICH THE AVERAGE VALUE FOR CHOSEN PARAMETER IN SPECIFIED CITY IS THE HIGHEST" textFill="WHITE" wrapText="true">
+                                 <font>
+                                    <Font size="17.0" />
+                                 </font>
+                              </CheckBox>
+                              <HBox maxHeight="400.0" prefHeight="175.0" prefWidth="859.0">
+                                 <children>
+                                    <ComboBox fx:id="cityComboBox" prefHeight="66.0" prefWidth="230.0" promptText="City" styleClass="combo-box">
+                                       <HBox.margin>
+                                          <Insets left="30.0" top="30.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
+                                    <ComboBox fx:id="parameterComboBox3" prefWidth="230.0" promptText="Parameter" styleClass="combo-box">
+                                       <padding>
+                                          <Insets left="30.0" right="30.0" />
+                                       </padding>
+                                       <HBox.margin>
+                                          <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
+                                       </HBox.margin>
+                                    </ComboBox>
+                                 </children>
+                              </HBox>
                            </children>
-                        </HBox>
+                        </VBox>
+                        <TextArea fx:id="statisticsText" prefHeight="666.0" prefWidth="603.0" />
                      </children>
                      <VBox.margin>
                         <Insets left="30.0" right="30.0" top="30.0" />
                      </VBox.margin>
-                  </VBox>
-                  <Button fx:id="showButton" mnemonicParsing="false" prefHeight="59.0" prefWidth="167.0" text="SHOW STATISTICS">
+                  </HBox>
+                  <Button fx:id="showButton" mnemonicParsing="false" onAction="#handleShowAction" prefHeight="59.0" prefWidth="167.0" text="SHOW STATISTICS">
                      <VBox.margin>
                         <Insets left="350.0" />
                      </VBox.margin>
                   </Button>
                     </children>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
                 </VBox>
             </center>
         </BorderPane>
